<resources>
    <string name="app_name">Cálculos</string>
    <string name="diz">Dízimo</string>
    <string name="transp">Transporte</string>
    <string name="newJob">Avaliar proposta de emprego</string>
    <string name="instruction">Por favor preencha os campos abaixo</string>
    <string name="addBenefits">Considerar benefícios</string>
    <string name="noAddBenefits">Desconsiderar benefícios</string>
    <string name="addVAdd">Contribuir com valor adicional</string>
    <string name="noAddVAdd"> Retirar valor adicional</string>
    <string name="salario"> Salário</string>
    <string name="beneficios"> Benefícios</string>
    <string name="valorAdicional">Valor Adicional</string>
    <string name="title_activity_transport">TransportActivity</string>
    <string name="pass_cost">Preço da Passagem</string>
    <string name="action_settings">Settings</string>
    <string name="start">Data Inicial</string>
    <string name="end">Data Final</string>
    <string name="from">De</string>
    <string name="to">Até</string>
    <string name="period">Período</string>
    <string name="zeroDecvalue">00,00</string>
    <string name="zeroIntcvalue">00</string>
    <string name="number_Of_Days_Quetion">Número de dias que irei de carro ao trabalho</string>
    <string name="fuelPrice">Preço médio do combustível</string>
    <string name="carSpendig">Consumo médio do carro (km/l)</string>
    <string name="distance">Distância percorrida diáriamente</string>
    <string name="choose_Calc_Option"> Deixar que o app calcule quantos dias posso ir de carro</string>
    <string name="budget">Quanto posso gastar?</string>
    <string name="calculate">Calcular</string>
    <string name="CalcDiz">Calculadora de Dízimo</string>
    <string name="vDiz">Valor a devolver R$</string>
</resources>
